Fixed z-index of dice with visibility

--- a/src/sass/sections/_dice.scss
+++ b/src/sass/sections/_dice.scss
@@ -10,7 +10,6 @@
     height: 100px;
     transform-style: preserve-3d;
     transition: 1s ease;
-    z-index: -1;
 }
 
 @keyframes rolling {
@@ -21,6 +20,7 @@
 
 .dice-wrapper{
     padding: 30px 0;
+    transition: all .25s cubic-bezier(.4, 0, .2, 1);
 }
 
 .face {
@@ -32,7 +32,6 @@
     transform-style: preserve-3d;
     background: linear-gradient(145deg, $button-secondary-color, $white-color);
     box-shadow: 0 1px 3px #6b48f21f, 0 1px 2px #6b48f23d;
-    z-index: -1;
 }
 
 .face::before {
